[package]
name = "cranelift-native"
version = "0.33.0"
authors = ["The Cranelift Project Developers"]
description = "Support for targeting the host with Cranelift"
repository = "https://github.com/CraneStation/cranelift"
categories = ["no-std"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift-codegen", version = "0.33.0", default-features = false }
target-lexicon = { version = "0.4.0", default-features = false }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "6.0.0"

[features]
default = ["std"]
std = ["cranelift-codegen/std", "target-lexicon/std"]
# when compiling with the "core" feature, nightly must be enabled
# enabling the "nightly" feature for raw-cpuid allows avoiding
# linking in a c-library.
core = ["cranelift-codegen/core", "raw-cpuid/nightly"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
