[package]
name = "cranelift-simplejit"
version = "0.36.0"
authors = ["The Cranelift Project Developers"]
description = "A simple JIT library backed by Cranelift"
repository = "https://github.com/CraneStation/cranelift"
documentation = "https://cranelift.readthedocs.io/"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift-codegen", version = "0.36.0" }
cranelift-module = { path = "../cranelift-module", version = "0.36.0" }
cranelift-native = { path = "../cranelift-native", version = "0.36.0" }
region = "2.0.0"
libc = { version = "0.2.42" }
errno = "0.2.4"
target-lexicon = { version = "0.4.0" }
memmap = { version = "0.7.0", optional = true } 

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "memoryapi"] }

[features]
selinux-fix = ['memmap']
default = []

[dev-dependencies]
cranelift = { path = "../cranelift-umbrella", version = "0.36.0" }
cranelift-frontend = { path = "../cranelift-frontend", version = "0.36.0" }
cranelift-entity = { path = "../cranelift-entity", version = "0.36.0" }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
