[package]
name = "cranelift-wasm"
version = "0.37.0"
authors = ["The Cranelift Project Developers"]
description = "Translator from WebAssembly to Cranelift IR"
repository = "https://github.com/CraneStation/cranelift"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["no-std", "wasm"]
readme = "README.md"
keywords = ["webassembly", "wasm"]
edition = "2018"

[dependencies]
wasmparser = { version = "0.32.1", default-features = false }
cranelift-codegen = { path = "../cranelift-codegen", version = "0.37.0", default-features = false }
cranelift-entity = { path = "../cranelift-entity", version = "0.37.0", default-features = false }
cranelift-frontend = { path = "../cranelift-frontend", version = "0.37.0", default-features = false }
hashmap_core = { version = "0.1.9", optional = true }
failure = { version = "0.1.1", default-features = false, features = ["derive"] }
failure_derive = { version = "0.1.1", default-features = false }
log = { version = "0.4.6", default-features = false }
serde = { version = "1.0.94", features = ["derive"], optional = true }

[dev-dependencies]
wabt = "0.7.0"
target-lexicon = "0.4.0"

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-frontend/std", "wasmparser/std"]
core = ["hashmap_core", "cranelift-codegen/core", "cranelift-frontend/core", "wasmparser/core"]
enable-serde = ["serde"]

# Temporary feature that enforces basic block semantics.
basic-blocks = ["cranelift-codegen/basic-blocks", "cranelift-frontend/basic-blocks"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
