[package]
name = "wasmtime-fuzz"
version = "0.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = { version = "1.0.19" }
cranelift-codegen = { path = "../cranelift/codegen", features = ["incremental-cache"] }
cranelift-reader = { path = "../cranelift/reader" }
cranelift-wasm = { path = "../cranelift/wasm" }
cranelift-filetests = { path = "../cranelift/filetests" }
cranelift-interpreter = { path = "../cranelift/interpreter" }
cranelift-fuzzgen = { path = "../cranelift/fuzzgen" }
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
target-lexicon = "0.12"
smallvec = "1.6.1"
wasmtime = { path = "../crates/wasmtime" }
wasmtime-fuzzing = { path = "../crates/fuzzing" }
component-test-util = { path = "../crates/misc/component-test-util" }
component-fuzz-util = { path = "../crates/misc/component-fuzz-util" }

[build-dependencies]
anyhow = "1.0.19"
proc-macro2 = "1.0"
arbitrary = { version = "1.1.0", features = ["derive"] }
rand = { version = "0.8.0" }
quote = "1.0"
component-fuzz-util = { path = "../crates/misc/component-fuzz-util" }

[features]
default = ['fuzz-spec-interpreter']
fuzz-spec-interpreter = ['wasmtime-fuzzing/fuzz-spec-interpreter']

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false

[[bin]]
name = "instantiate"
path = "fuzz_targets/instantiate.rs"
test = false
doc = false

[[bin]]
name = "api_calls"
path = "fuzz_targets/api_calls.rs"
test = false
doc = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false

[[bin]]
name = "spectests"
path = "fuzz_targets/spectests.rs"
test = false
doc = false

[[bin]]
name = "table_ops"
path = "fuzz_targets/table_ops.rs"
test = false
doc = false

[[bin]]
name = "stacks"
path = "fuzz_targets/stacks.rs"
test = false
doc = false

[[bin]]
name = "compile-maybe-invalid"
path = "fuzz_targets/compile-maybe-invalid.rs"
test = false
doc = false

[[bin]]
name = "cranelift-fuzzgen"
path = "fuzz_targets/cranelift-fuzzgen.rs"
test = false
doc = false

[[bin]]
name = "instantiate-many"
path = "fuzz_targets/instantiate-many.rs"
test = false
doc = false

[[bin]]
name = "component_api"
path = "fuzz_targets/component_api.rs"
test = false
doc = false

[[bin]]
name = "cranelift-icache"
path = "fuzz_targets/cranelift-icache.rs"
test = false
doc = false
