[package]
name = "wasmtime-fuzz"
version = "0.0.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
cranelift-codegen = { workspace = true, features = ["incremental-cache", "x86", "arm64", "s390x", "riscv64"] }
cranelift-reader = { workspace = true }
cranelift-wasm = { workspace = true }
cranelift-filetests = { workspace = true }
cranelift-interpreter = { workspace = true }
cranelift-fuzzgen = { workspace = true }
cranelift-native = { workspace = true }
cranelift-control = { workspace = true }
libfuzzer-sys = { workspace = true, features = ["arbitrary-derive"] }
target-lexicon = { workspace = true }
smallvec = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true, features = ["winch"] }
wasmtime-fuzzing = { workspace = true }
component-test-util = { workspace = true }
component-fuzz-util = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
proc-macro2 = "1.0"
arbitrary = { workspace = true, features = ["derive"] }
rand = { version = "0.8.0" }
quote = "1.0"
component-fuzz-util = { workspace = true }

[features]
default = ['fuzz-spec-interpreter']
fuzz-spec-interpreter = ['wasmtime-fuzzing/fuzz-spec-interpreter']
chaos = ["cranelift-control/chaos"]

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false

[[bin]]
name = "instantiate"
path = "fuzz_targets/instantiate.rs"
test = false
doc = false

[[bin]]
name = "api_calls"
path = "fuzz_targets/api_calls.rs"
test = false
doc = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false

[[bin]]
name = "wast_tests"
path = "fuzz_targets/wast_tests.rs"
test = false
doc = false

[[bin]]
name = "table_ops"
path = "fuzz_targets/table_ops.rs"
test = false
doc = false

[[bin]]
name = "stacks"
path = "fuzz_targets/stacks.rs"
test = false
doc = false

[[bin]]
name = "cranelift-fuzzgen"
path = "fuzz_targets/cranelift-fuzzgen.rs"
test = false
doc = false

[[bin]]
name = "instantiate-many"
path = "fuzz_targets/instantiate-many.rs"
test = false
doc = false

[[bin]]
name = "component_api"
path = "fuzz_targets/component_api.rs"
test = false
doc = false

[[bin]]
name = "cranelift-icache"
path = "fuzz_targets/cranelift-icache.rs"
test = false
doc = false

[[bin]]
name = "call_async"
path = "fuzz_targets/call_async.rs"
test = false
doc = false

[[bin]]
name = "memory_accesses"
path = "fuzz_targets/memory_accesses.rs"
test = false
doc = false
bench = false
